ABX-3L launch updates

--- a/waterblast-automation/autobox-abx-3l.html
+++ b/waterblast-automation/autobox-abx-3l.html
@@ -56,10 +56,13 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-      
-      <p class="product-description promo-heading"><em>Rent Today!</em></p>
 
-      <p class="product-description">The AutoBox ABX-3L is an automated system for hands-free heat exchanger tube cleaning applications. It is designed to run triple, dual, or single flex lance setups with an emphasis on portability, ease of setup, and safety.</p>
+      <p class="product-description">The StoneAge AutoBox ABX-3L is an automated system for hands-free tube bundle and Fin Fan heat exchanger cleaning applications. It is designed to run triple, dual, or single flex lance setups with an emphasis on portability, ease of setup, and safety.</p>
+      <p>The ABX-3L can be used with any pressure rated hose ranging in size from 3/2 to 8/4. Paired with StoneAge Banshee rotary tube cleaning nozzles and our Lightweight Positioner, the ABX-3L offers safe and efficient tube cleaning in the harshest exchanger environments. </p>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a> <a class="btn" href="/hose-containment" data-toggle="tooltip" title="Hose Containment System">HCS</a> <a class="btn" href="/fin-fan-accessory" data-toggle="tooltip" title="Fin Fan Accessory">FF</a> <a class="btn" href="/autostroke" data-toggle="tooltip" title="AutoStroke">AST</a>
+      </div>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -74,10 +77,10 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li>Triple, dual, or single lance operation</li>
-                <li>Handles hose sizes from 3/2 to 8/4 without component changes</li>
-                <li>Steel-reinforced drive belt is good for hundreds of hours of operation and easy to replace</li>
-                <li>Independent forward/reverse speed control and remotely adjustable hose clamp pressure allows operator to adapt to changing conditions and minimize hose wear</li>
-                <li>High quality construction to withstand corrosive environments</li>
+                <li>Handles hose sizes from 3/2 to 8/4 with no equipment modifications</li>
+                <li>Proven reliability on the toughest jobs and most corrosive environments</li>
+                <li>Modular, compact design is easy to transport and quick to set up</li>
+                <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
               </ul>
             </div>
           </div>
@@ -187,24 +190,24 @@ master-slider: yes
   </div>
   <div class="row row-centered">
     <div class="col-sm-2 col-centered">
-      <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
-      <h5>Lightweight Positioner</h5></a>
+      <a href="/banshee"><img class="img-responsive" src="/assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
+      <h5>Banshee Rotary Tools</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
-      <h5>Fin Fan Accessory</h5></a>
+      <a href="/lightweight-positioner"><img class="img-responsive" src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
+      <h5>Lightweight Positioner</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
       <h5>Hose Containment System</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/banshee"><img class="img-responsive" src="/assets/img/thumb/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-      <h5>Banshee Rotary Tools</h5></a>
+      <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-ast-02.jpg" alt="AutoStroke for exchanger cleaning">
+      <h5>AutoStroke</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
-      <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
-      <h5>AutoBox ABX-2L</h5></a>
+      <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
+      <h5>Fin Fan Accessory</h5></a>
     </div>
   </div>
 </section>
