--- a/waterblast-automation/autostroke.html
+++ b/waterblast-automation/autostroke.html
@@ -36,8 +36,8 @@ master-slider: yes
             <img class="ms-thumb" src="/assets/img/product/thumb-ast-03.jpg" alt="thumb">
           </div>
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-02.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-ast-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/ast-04.jpg" alt="AutoStroke blockage sensor for heat exchanger tube cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-ast-04.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -57,8 +57,12 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The AutoStroke AST-100-2L is designed to increase efficiency of the ABX-2L in applications with plugged heat exchanger tubes.</p>
-      <p>The AutoStroke senses when a Banshee nozzle has hit a plug and activates an automatic forward and reverse pecking motion that allows the jets to effectively break through obstructions without operator intervention. This produces optimal cleaning and saves wear on your Banshee tools.</p>
+      <p class="product-description">The AutoStroke is designed to increase efficiency of the AutoBox ABX-2L and ABX-3L in applications with plugged heat exchanger tubes.</p>
+      <p>The AutoStroke senses when a Banshee nozzle has hit a plug and activates an automatic forward and reverse pecking motion that allows the jets to effectively break through obstructions without operator intervention. This produces optimal cleaning and saves wear on your Banshee tools.</p>  
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a>
+      </div>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -72,10 +76,11 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Quick install to your existing ABX-2L</li>
+                <li>Quick install to your existing AutoBox ABX-3L or ABX-2L</li>
                 <li>Automated forward and reverse tool motion to clear obstructions</li>
                 <li>Adjustable sensitivity for changing job conditions</li>
                 <li>Adjustable retract distance allows nozzle to regain rotation</li>
+                <li>Battery and pneumatic power options</li>
               </ul>
             </div>
           </div>
@@ -90,35 +95,90 @@ master-slider: yes
           </div>
           <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="panel-body">
-              <table class="table specs table-hover">
-              <tbody>
-                <tr>
-                  <th>Dimensions</th>
-                  <td>11.5 x 10.5 x 7.5 in</td>
-                  <td><span class="metric">351 x 320 x 229 cm</span><br></td>
-                </tr>
-                <tr>
-                  <th>Weight</th>
-                  <td>10 lb</td>
-                  <td><span class="metric">4.5 kg</span></td>
-                </tr>
-                <tr>
-                  <th>Umbilical Hose Length</th>
-                  <td>25 ft</td>
-                  <td><span class="metric">762 cm</span></td>
-                </tr>
-                <tr>
-                  <th>Hose Force</th>
-                  <td>0–60 lb</td>
-                  <td><span class="metric">0–27 kg</span></td>
-                </tr>
-                <tr>
-                  <th>Retract Time</th>
-                  <td colspan="2">0.05–1.1 sec</td>
-                </tr>
-              </tbody>
-              </table>
-              <p>&#42;<em>Custom rail lengths available</em></p>
+              <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#200" aria-controls="200" role="tab" data-toggle="tab">AST-200</a></li>
+                <li role="presentation"><a href="#100" aria-controls="100" role="tab" data-toggle="tab">AST-100-2L</a></li>
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <!-- 200 -->     
+                <div role="tabpanel" class="tab-pane active" id="200">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">AutoStroke</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">AST-200</td>
+                    </tr>
+                    <tr>
+                      <th>Hose Force</th>
+                      <td>0-60 lbs</td>
+                      <td><span class="metric">0-27.2 kg</span></td>
+                    </tr>
+                    <tr>
+                      <th>Retract Time</th>
+                      <td colspan="2">0.05 to 1.1 Seconds</td>
+                    </tr>
+                    <tr>
+                      <th>Dimensions</th>
+                      <td>16.9 x 11.7 x 7.9 in.</td>
+                      <td><span class="metric">429 mm x 297 mm x 201 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>18 lbs</td>
+                      <td><span class="metric">8.2 kg</span></td>
+                    </tr>
+                    <tr>
+                      <th>Power Source</th>
+                      <td colspan="2">Self-generating pneumatic</td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+                <!-- 100 -->
+                <div role="tabpanel" class="tab-pane" id="100">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Family</th>
+                      <td colspan="2">AutoStroke</td>
+                    </tr>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">AST-100-2L</td>
+                    </tr>
+                    <tr>
+                      <th>Hose Force</th>
+                      <td>0-60 lbs</td>
+                      <td><span class="metric">0-27.2 kg</span></td>
+                    </tr>
+                    <tr>
+                      <th>Retract Time</th>
+                      <td colspan="2">0.05 to 1.1 Seconds</td>
+                    </tr>
+                    <tr>
+                      <th>Dimensions</th>
+                      <td>14.0 x 10.5 x 7.5 in.</td>
+                      <td><span class="metric">356 mm x 267 mm x 191 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>10 lb</td>
+                      <td><span class="metric">4.5 kg</span></td>
+                    </tr>
+                    <tr>
+                      <th>Power Source</th>
+                      <td colspan="2">C-type batteries</td>
+                    </tr>
+                  </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -154,9 +214,9 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="/assets/pdf/ast_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Data Sheet</a></li>
-                <li><a href="/assets/pdf/tool-talks/AST-tool-talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Tool Talk</a></li>
-                <li><a href="/assets/pdf/manuals/AST-100_User_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Manual</a></li>
+                <li><a href="/assets/pdf/data-sheets/AST_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/AST-100_User_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke AST-100-2L Manual</a></li>
+                <li><a href="/assets/pdf/manuals/AST-200_User_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoStroke AST-200 Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
