--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -60,11 +60,13 @@ master-slider: yes
         </div>
       <div class="clearfix"></div>
       </div>
-      
-      <p class="product-description promo-heading"><em>Coming soon for AutoBox ABX-3L!</em></p>
 
-      <p class="product-description">The HCS-2L Hose Containment System is a lightweight accessory for the AutoBox ABX-2L that contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
-      <p>The HCS-2L is simple to setup and operate, and greatly increases job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. It also increases hose life by reducing wear and makes it easy to store and transport hoses between jobs.</p>
+      <p class="product-description">The Hose Containment System is a lightweight accessory for the AutoBox family of hose tractors that contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
+      <p>The Hose Containment System is simple to setup and operate, and greatly increases job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. It also increases hose life by reducing wear and makes it easy to store and transport hoses between jobs.</p>     
+
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a>
+      </div>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -99,18 +101,18 @@ master-slider: yes
             <div class="panel-body">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#tm16" aria-controls="tm16" role="tab" data-toggle="tab">HCS-2L-TM16</a></li>
-                <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">HCS-2L-M24</a></li>
+                <li role="presentation" class="active"><a href="#3l" aria-controls="3l" role="tab" data-toggle="tab">HCS-3L</a></li>
+                <li role="presentation"><a href="#2l" aria-controls="2l" role="tab" data-toggle="tab">HCS-2L</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
-                <!-- TM16 -->
-                <div role="tabpanel" class="tab-pane active" id="tm16">
+                <!-- 3L -->
+                <div role="tabpanel" class="tab-pane active" id="3l">
                   <table class="table specs table-hover">
                   <tbody>
                     <tr>
-                      <th>Tool Model</th>
-                      <td colspan="2">HCS-2L-TM16</td>
+                      <th>Tool Models</th>
+                      <td colspan="2">HCS-3L-TM16, HCS-3L-M24</td>
                     </tr>
                     <tr>
                       <th>Maximum Pressure</th>
@@ -119,49 +121,33 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Hose Size</th>
-                      <td colspan="2">&le; 6/4</td>
-                    </tr>
-                    <tr>
-                      <th>Hose Connections</th>
-                      <td colspan="2">.56 Type M to .75 Type M</td>
+                      <td colspan="2">3/4, 4/4–8/4</td>
                     </tr>
                     <tr>
                       <th>Storage Capacity&#42;</th>
-                      <td>84 ft (2 hoses)</td>
-                      <td><span class="metric">25 m</span></td>
-                    </tr>
-                    <tr>
-                      <th>Swivel Inlet</th>
-                      <td colspan="2">1.00 Type M to MP12</td>
+                      <td>75 ft (3 hoses)</td>
+                      <td><span class="metric">23 m</span></td>
                     </tr>
                     <tr>
                       <th>Dimensions</th>
-                      <td>28.6 x 15.4 in.</td>
-                      <td><span class="metric">73 x 39 cm</span></td>
+                      <td>38 x 15 in.</td>
+                      <td><span class="metric">97 x 38 cm</span></td>
                     </tr>
-<!--
-                    <tr>
-                      <th>Snout Length</th>
-                      <td>90 in.</td>
-                      <td><span class="metric">228 cm</span></td>
-                    </tr>
--->
                     <tr>
                       <th>Weight</th>
-                      <td>42 lb</td>
-                      <td><span class="metric">19 kg</span></td>
+                      <td>64 lb</td>
+                      <td><span class="metric">29 kg</span></td>
                     </tr>
                   </tbody>
                   </table>
-                  <p>&#42; Based on 6/4 size hose</p>
                 </div>
-                <!-- M24 -->     
-                <div role="tabpanel" class="tab-pane" id="m24">
+                <!-- 2L -->     
+                <div role="tabpanel" class="tab-pane" id="2l">
                   <table class="table specs table-hover">
                   <tbody>
                     <tr>
-                      <th>Tool Model</th>
-                      <td colspan="2">HCS-2L-M24</td>
+                      <th>Tool Models</th>
+                      <td colspan="2">HCS-2L-TM16, HCS-2L-M24</td>
                     </tr>
                     <tr>
                       <th>Maximum Pressure</th>
@@ -173,30 +159,15 @@ master-slider: yes
                       <td colspan="2">&le; 6/4</td>
                     </tr>
                     <tr>
-                      <th>Hose Connections</th>
-                      <td colspan="2">MP6 to BSPP4C</td>
-                    </tr>
-                    <tr>
                       <th>Storage Capacity&#42;</th>
                       <td>84 ft (2 hoses)</td>
-                      <td><span class="metric">25 m</span></td>
-                    </tr>
-                    <tr>
-                      <th>Swivel Inlet</th>
-                      <td colspan="2">MP12 to M24C</td>
+                      <td><span class="metric">26 m</span></td>
                     </tr>
                     <tr>
                       <th>Dimensions</th>
                       <td>28.6 x 15.4 in.</td>
                       <td><span class="metric">73 x 39 cm</span></td>
                     </tr>
-<!--
-                    <tr>
-                      <th>Snout Length</th>
-                      <td>90 in.</td>
-                      <td><span class="metric">228 cm</span></td>
-                    </tr>
--->
                     <tr>
                       <th>Weight</th>
                       <td>42 lb</td>
@@ -204,7 +175,6 @@ master-slider: yes
                     </tr>
                   </tbody>
                   </table>
-                  <p>&#42; Based on 6/4 size hose</p>
                 </div>
               </div>
             </div>
@@ -242,8 +212,8 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="/assets/pdf/hcs-2l_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Data Sheet</a></li>
-                <li><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Tool Talk</a></li>
+                <li><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hose Containment Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-3L Manual</a></li>
                 <li><a href="/assets/pdf/manuals/HCS-2L_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
@@ -268,6 +238,10 @@ master-slider: yes
       <h2>Related Items</h2>
   </div>
   <div class="row row-centered">
+    <div class="col-sm-2 col-centered">
+      <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-03.jpg" alt="ABX-3L flex lancing">
+      <h5>AutoBox ABX-3L</h5></a>
+    </div>
     <div class="col-sm-2 col-centered">
       <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="ABX-2L flex lancing">
       <h5>AutoBox ABX-2L</h5></a>
