--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -57,10 +57,14 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description promo-heading"><em>Coming soon for ABX-3L &amp; ABX-PRO!</em></p>
+<!--      <p class="product-description promo-heading"><em>Coming soon for ABX-3L &amp; ABX-PRO!</em></p>-->
 
-      <p class="product-description">The Fin Fan Accessory, is designed to adapt the AutoBox ABX–2L for the specific requirements of cleaning Fin Fan style exchangers.</p>
-      <p>Fin Fan exchangers can be much wider than standard heat exchangers and are often accessed by very narrow walkways. Fin Fan Accessory components allow the ABX-2L to be safely positioned in tight walkway spaces for this type of cleaning. Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
+      <p class="product-description">The Fin Fan Accessory is designed to adapt the AutoBox family of hose tractors for the specific requirements of cleaning Fin Fan style exchangers.</p>
+      <p>Fin Fan exchangers can be much wider than standard heat exchangers and are often accessed by very narrow walkways. Fin Fan Accessory components allow an AutoBox to be safely positioned in tight walkway spaces for this type of cleaning. Customizable rail lengths and simple mounting clamps enable the positioning system to accommodate most all Fin Fan headers and configurations.</p>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">ABX-PRO</a> <a class="btn" href="/lightweight-positioner" data-toggle="tooltip" title="Lightweight Positioner">LWP</a>
+      </div>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -74,7 +78,8 @@ master-slider: yes
           <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
               <ul>
-                <li>Lightweight positioning system is customizable to fit most exchanger sizes</li>
+                <li>Single, dual, and triple lance options</li>
+                <li>Modular, lightweight positioning system is customizable to fit most exchanger sizes</li>
                 <li>Hose snout and guide tube assembly aids accurate lance control and indexing</li>
                 <li>Built-in backout prevention</li>
                 <li>Scaffold mount</li>
@@ -95,6 +100,10 @@ master-slider: yes
               <table class="table specs table-hover">
               <tbody>
                 <tr>
+                  <th>Tool Family</th>
+                  <td colspan="2">Fin Fan Accessory</td>
+                </tr>
+                <tr>
                   <th>Horizontal Rail Length&#42;</th>
                   <td>Standard 15 ft</td>
                   <td><span class="metric">457 cm</span><br></td>
@@ -111,12 +120,12 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Hose Size</th>
-                  <td colspan="2">3/2-8/4</td>
+                  <td colspan="2">3/4-8/4</td>
                 </tr>
                 <tr>
                   <th>Pitch Adjustment</th>
-                  <td>0.6–2.5 in.</td>
-                  <td><span class="metric">15–64 mm</span></td>
+                  <td>1.75–6.0 in.</td>
+                  <td><span class="metric">44–152 mm<br></span></td>
                 </tr>
               </tbody>
               </table>
@@ -165,8 +174,8 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
-                <li><a href="/assets/pdf/tool-talks/fin_fan_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>
-                <li><a href="/assets/pdf/manuals/FF-100_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Manual</a></li>
+<!--                <li><a href="/assets/pdf/tool-talks/fin_fan_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>-->
+                <li><a href="/assets/pdf/manuals/FF_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Manual</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
