--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -57,7 +57,12 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The Lightweight Positioner is used in conjunction with the AutoBox ABX-2L for controlled, efficient, and safe cleaning of heat exchanger tube IDs. It is specifically designed to be modular, lightweight, easy to setup, and expandable to allow for cleaning of different sized heat exchangers.</p>
+      <p class="product-description">The Lightweight Positioner is used in conjunction with the AutoBox family of hose tractors for controlled, efficient, and safe cleaning of heat exchanger tube IDs. It is specifically designed to be modular, lightweight, easy to setup, and expandable to allow for cleaning of different sized heat exchangers.</p>
+      
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">ABX-PRO</a>
+      </div>
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
